--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 aiogram==3.4.1
-aiohttp==3.8.4
-python-dotenv==1.0.0
-openai==1.35.14
-requests==2.31.0
+aiohttp>=3.9.0
+python-dotenv
+openai>=1.0.0
