--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ python-dotenv==1.0.0
 aiohttp>=3.9.0
 openai==1.35.14
 requests==2.31.0
-pydantic>=2.4.1,<2.6
+pydantic-core==2.14.6 --platform manylinux2014_x86_64
