--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aiogram==3.4.1
+Pillow==10.0.0
 python-dotenv==1.0.0
-aiohttp>=3.9.0
 openai==1.35.14
-requests==2.31.0
+httpx<1,>=0.23.0
+--prefer-binary
+pydantic>=2.4.1,<2.6.0
