--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-aiogram==2.25.1  # Стабильная версия без pydantic v2
-Pillow==9.5.0    # Проверенная совместимая версия
+python-telegram-bot==20.8  # Альтернатива aiogram без сложных зависимостей
+Pillow==10.3.0  # Более новая версия с поддержкой Python 3.13
 python-dotenv==1.0.0
