--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-#python-telegram-bot==20.8  # Удалите, если не используете
+python-telegram-bot==20.8  # Удалите, если не используете
 Pillow==11.3.0
 python-dotenv==1.0.0
 aiohttp==3.10.10
 aiogram==3.13.1
-openai==1.51.2  # Последняя стабильная версия на октябрь 2025
