--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-python-telegram-bot==20.8  # Удалите, если не используете
+#python-telegram-bot==20.8  # Удалите, если не используете
 Pillow==11.3.0
 python-dotenv==1.0.0
 aiohttp==3.10.10
