--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,6 @@ services:
   - type: web
     name: talkbubblesbot
     env: python
-    region: frankfurt
     plan: free
     buildCommand: ./render-build.sh
     startCommand: python bot.py
@@ -12,4 +11,7 @@ services:
       - key: OPENROUTER_API_KEY
         sync: false
       - key: RENDER_EXTERNAL_HOSTNAME
-        sync: false
+        fromService:
+          type: web
+          name: talkbubblesbot
+          property: host
