--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,5 @@
-aiogram==3.13.1
-aiohttp==3.10.10
-aiofiles==24.1.0
-aiohappyeyeballs==2.6.1
-aiosignal==1.4.0
-annotated-types==0.7.0
-attrs==25.3.0
-certifi==2025.8.3
-charset_normalizer==3.4.3
-click==8.1.8
-frozenlist==1.7.0
-gTTS==2.5.4
-idna==3.10
-imageio-ffmpeg==0.6.0
-magic-filter==1.0.12
-multidict==6.6.4
-pydantic==2.9.2
-pydantic-core==2.23.4
-python-dotenv==1.0.0
-propcache==0.3.2
-requests==2.32.4
-typing-extensions==4.14.1
-urllib3==2.5.0
-yarl==1.20.1
 Pillow==11.3.0
-pydub==0.25.1
+python-dotenv==1.0.0
+aiohttp==3.10.10
+aiogram==3.13.1
+gunicorn==23.0.0
