--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Pillow==11.3.0
 python-dotenv==1.0.0
 aiohttp==3.10.10
-python-telegram-bot==21.4
+python-telegram-bot[webhooks]==21.4
 gTTS==2.5.4
 numpy==2.1.2
 opencv-python==4.10.0.84
