--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 Pillow==11.3.0
 python-dotenv==1.0.0
 aiohttp==3.10.10
-python-telegram-bot[webhooks]==21.4
+aiogram==3.13.1
 gTTS==2.5.4
+moviepy==1.0.3
 numpy==2.1.2
-opencv-python==4.10.0.84
-ffmpeg-python==0.2.0
-yookassa==3.0.0  # Добавлено для ЮKassa
